# bot-automation

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  TODO.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  test_excel.py
.github/workflows/: ci.yml  release.yml
src/: __init__.py  bot.py  config.py  reset_webhook.py
src/core/: __init__.py  config_validator.py  exceptions.py  logger.py
src/models/: __init__.py  internship.py
src/services/: company_extractor.py  extractor.py  position_categorizer.py  scraper.py
src/utils/: platform.py
tests/: __init__.py  conftest.py  test_company_extractor.py  test_extractor.py  test_models.py  test_position_categorizer.py
