[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "magang-tracker-bot"
version = "1.0.0"
description = "Telegram Bot untuk mencatat lowongan magang secara otomatis dari media sosial"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Zulpadli Syar", email = "zulpadli@example.com"}
]
keywords = ["telegram", "bot", "magang", "internship", "tracker", "scraper"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Office/Business :: Scheduling",
]

dependencies = [
    "beautifulsoup4>=4.14.0",
    "openai>=1.0.0",
    "openpyxl>=3.1.0",
    "python-dotenv>=1.0.0",
    "python-telegram-bot>=22.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "flake8>=7.0",
    "isort>=5.13",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[project.urls]
Homepage = "https://github.com/zulpadlisyar/magang-tracker-bot"
Repository = "https://github.com/zulpadlisyar/magang-tracker-bot"
Issues = "https://github.com/zulpadlisyar/magang-tracker-bot/issues"
Documentation = "https://github.com/zulpadlisyar/magang-tracker-bot/blob/main/README.md"

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["src"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "venv", ".venv", "build", "dist"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ["venv", ".venv", "build", "dist"]

